// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverDropdownTest render 1`] = `
"<div>
  <InsightsCommandButton iconProps={{...}} text="Start over" ariaLabel="start over menu" onClick={[Function (anonymous)]} menuIconProps={{...}} componentRef={{...}} />
</div>"
`;

exports[`StartOverDropdownTest render ContextualMenu 1`] = `
<div>
  <InsightsCommandButton
    ariaLabel="start over menu"
    componentRef={{}}
    iconProps={
      {
        "iconName": "Refresh",
      }
    }
    menuIconProps={
      {
        "iconName": "ChevronDown",
      }
    }
    onClick={[Function]}
    text="Start over"
  />
  <ContextualMenu
    directionalHint={7}
    items={
      [
        {
          "key": "assessment",
          "name": "Start over all test suffix stub",
          "onClick": [Function],
        },
        {
          "key": "test",
          "name": "Start over single test suffix stub",
          "onClick": [Function],
        },
      ]
    }
    onDismiss={[Function]}
    target="test target"
  />
</div>
`;

exports[`StartOverDropdownTest render with dropdown on left 1`] = `
<div>
  <InsightsCommandButton
    ariaLabel="start over menu"
    componentRef={{}}
    iconProps={
      {
        "iconName": "Refresh",
      }
    }
    menuIconProps={
      {
        "iconName": "ChevronRight",
      }
    }
    onClick={[Function]}
    text="Start over"
  />
  <ContextualMenu
    directionalHint={8}
    items={
      [
        {
          "key": "assessment",
          "name": "Start over all test suffix stub",
          "onClick": [Function],
        },
        {
          "key": "test",
          "name": "Start over single test suffix stub",
          "onClick": [Function],
        },
      ]
    }
    onDismiss={[Function]}
    target="test target"
  />
</div>
`;
